# ontol

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: check-tests.yaml  publish-pypi.yaml  release.yaml
deploy/: app.py  requirements.txt
examples/: fundamental_cycle.ontol  math_analysis.ontol  novikov.json  novikov.ontol  novikov.puml  online_store.ontol  project_management.ontol  set_theory.ontol  test.json  test.ontol  test.puml  test1.json  test1.ontol  test1.puml  test2.ontol  test3.ontol  test_ai.ontol  vector_spaces.ontol
examples/bootstrapping/: attributes.ontol  bootstrapping.ontol  functions.ontol  hierarchy.ontol  imports.ontol  statement.ontol  tokens.ontol  types.ontol
images/: abstree.puml  attributes.puml  functions.puml  hierarchy.puml  program.puml  types.puml
ontol/: parser.py
parser/: __init__.py  ast.py  cli.py  oast.py  parser.py  plantuml.py  plantuml_generator.py  serializer.py
src/: __init__.py  cli.py  oast.py  parser.py  plantuml.py  plantuml_generator.py  serializer.py
src/ontol/: __init__.py  ai.py  cli.py  constants.py  oast.py  parser.py  plantuml.py  retranslator.py  serializer.py
src/ontol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_oast.py  test_parser.py  test_plantuml_generator.py  test_retranslator.py  test_serializer.py
